--- a/Default.WebApp.Template.Client/wwwroot/index.html
+++ b/Default.WebApp.Template.Client/wwwroot/index.html
@@ -5,11 +5,8 @@
     <meta charset="utf-8" />
     <title>Default.WebApp.Template</title>
     <base href="/" />
-    <link href="css/app.css" rel="stylesheet" />
-    <link href="manifest.json" rel="manifest" />
-    
-    <!-- If you add any scoped CSS files, uncomment the following to load them
-    <link href="Default.WebApp.Template.Client.styles.css" rel="stylesheet" /> -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -21,7 +18,6 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
-
 </html>
